// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid renders with defaultProps 1`] = `
<div
  className="ax-grid__container ax-space--medium"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--medium ax-grid--gutters-vertical--medium"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with fill large 1`] = `
<div
  className="ax-grid__container ax-space--medium"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--medium ax-grid--gutters-vertical--medium ax-grid--fill--large"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with fill medium 1`] = `
<div
  className="ax-grid__container ax-space--medium"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--medium ax-grid--gutters-vertical--medium ax-grid--fill--medium"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with fill small 1`] = `
<div
  className="ax-grid__container ax-space--medium"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--medium ax-grid--gutters-vertical--medium ax-grid--fill--small"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with fill true 1`] = `
<div
  className="ax-grid__container ax-space--medium"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--medium ax-grid--gutters-vertical--medium ax-grid--fill"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with fit large 1`] = `
<div
  className="ax-grid__container ax-space--medium"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--medium ax-grid--gutters-vertical--medium ax-grid--fit--large"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with fit medium 1`] = `
<div
  className="ax-grid__container ax-space--medium"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--medium ax-grid--gutters-vertical--medium ax-grid--fit--medium"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with fit small 1`] = `
<div
  className="ax-grid__container ax-space--medium"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--medium ax-grid--gutters-vertical--medium ax-grid--fit--small"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with fit true 1`] = `
<div
  className="ax-grid__container ax-space--medium"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--medium ax-grid--gutters-vertical--medium ax-grid--fit"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with full large 1`] = `
<div
  className="ax-grid__container ax-space--medium"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--medium ax-grid--gutters-vertical--medium ax-grid--full--large"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with full medium 1`] = `
<div
  className="ax-grid__container ax-space--medium"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--medium ax-grid--gutters-vertical--medium ax-grid--full--medium"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with full small 1`] = `
<div
  className="ax-grid__container ax-space--medium"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--medium ax-grid--gutters-vertical--medium ax-grid--full--small"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with full true 1`] = `
<div
  className="ax-grid__container ax-space--medium"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--medium ax-grid--gutters-vertical--medium ax-grid--full"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with gutters  1`] = `
<div
  className="ax-grid__container ax-space--medium"
>
  <div
    className="ax-grid ax-grid--responsive"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with gutters large 1`] = `
<div
  className="ax-grid__container ax-space--medium"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--large ax-grid--gutters-vertical--large"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with gutters medium 1`] = `
<div
  className="ax-grid__container ax-space--medium"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--medium ax-grid--gutters-vertical--medium"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with gutters small 1`] = `
<div
  className="ax-grid__container ax-space--medium"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--small ax-grid--gutters-vertical--small"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with gutters tiny 1`] = `
<div
  className="ax-grid__container ax-space--medium"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--tiny ax-grid--gutters-vertical--tiny"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with horizontalAlign around 1`] = `
<div
  className="ax-grid__container ax-space--medium"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--medium ax-grid--gutters-vertical--medium ax-grid--horizontal-around"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with horizontalAlign between 1`] = `
<div
  className="ax-grid__container ax-space--medium"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--medium ax-grid--gutters-vertical--medium ax-grid--horizontal-between"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with horizontalAlign end 1`] = `
<div
  className="ax-grid__container ax-space--medium"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--medium ax-grid--gutters-vertical--medium ax-grid--horizontal-end"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with horizontalAlign middle 1`] = `
<div
  className="ax-grid__container ax-space--medium"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--medium ax-grid--gutters-vertical--medium ax-grid--horizontal-middle"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with horizontalAlign start 1`] = `
<div
  className="ax-grid__container ax-space--medium"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--medium ax-grid--gutters-vertical--medium ax-grid--horizontal-start"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with horizontalGutters  1`] = `
<div
  className="ax-grid__container ax-space--medium"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-vertical--medium"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with horizontalGutters large 1`] = `
<div
  className="ax-grid__container ax-space--medium"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--large ax-grid--gutters-vertical--medium"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with horizontalGutters medium 1`] = `
<div
  className="ax-grid__container ax-space--medium"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--medium ax-grid--gutters-vertical--medium"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with horizontalGutters small 1`] = `
<div
  className="ax-grid__container ax-space--medium"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--small ax-grid--gutters-vertical--medium"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with horizontalGutters tiny 1`] = `
<div
  className="ax-grid__container ax-space--medium"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--tiny ax-grid--gutters-vertical--medium"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with responsive false 1`] = `
<div
  className="ax-grid__container ax-space--medium"
>
  <div
    className="ax-grid ax-grid--gutters-horizontal--medium ax-grid--gutters-vertical--medium"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with shrink large 1`] = `
<div
  className="ax-grid__container ax-space--medium"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--medium ax-grid--gutters-vertical--medium ax-grid--shrink--large"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with shrink medium 1`] = `
<div
  className="ax-grid__container ax-space--medium"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--medium ax-grid--gutters-vertical--medium ax-grid--shrink--medium"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with shrink small 1`] = `
<div
  className="ax-grid__container ax-space--medium"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--medium ax-grid--gutters-vertical--medium ax-grid--shrink--small"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with shrink true 1`] = `
<div
  className="ax-grid__container ax-space--medium"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--medium ax-grid--gutters-vertical--medium ax-grid--shrink"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with verticalAlign end 1`] = `
<div
  className="ax-grid__container ax-space--medium"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--medium ax-grid--gutters-vertical--medium ax-grid--vertical-end"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with verticalAlign middle 1`] = `
<div
  className="ax-grid__container ax-space--medium"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--medium ax-grid--gutters-vertical--medium ax-grid--vertical-middle"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with verticalAlign start 1`] = `
<div
  className="ax-grid__container ax-space--medium"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--medium ax-grid--gutters-vertical--medium ax-grid--vertical-start"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with verticalGutters  1`] = `
<div
  className="ax-grid__container ax-space--medium"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--medium"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with verticalGutters large 1`] = `
<div
  className="ax-grid__container ax-space--medium"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--medium ax-grid--gutters-vertical--large"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with verticalGutters medium 1`] = `
<div
  className="ax-grid__container ax-space--medium"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--medium ax-grid--gutters-vertical--medium"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with verticalGutters small 1`] = `
<div
  className="ax-grid__container ax-space--medium"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--medium ax-grid--gutters-vertical--small"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with verticalGutters tiny 1`] = `
<div
  className="ax-grid__container ax-space--medium"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--medium ax-grid--gutters-vertical--tiny"
  >
    <div />
  </div>
</div>
`;
